Update to the Font Awesome Select and Bootstrap Glyphicon Style to stop longer items from overlapping in the select box columns

--- a/branches/2.0-cs10/extensions/customfields/bootstrap_glyphicon_select/bootstrap_glyphicon_select_styles.css
+++ b/branches/2.0-cs10/extensions/customfields/bootstrap_glyphicon_select/bootstrap_glyphicon_select_styles.css
@@ -15,7 +15,8 @@
 	column-count: 3;
 	-webkit-column-gap: 1px;
 	-moz-column-gap: 1px;
-	column-gap: 1px; 
+	column-gap: 1px;
+	width: -moz-fit-content;
 }
 	
 .bsgi-cols-3 ul li {
